# cascades-sdk

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: contract-mirror.yml  publish-npm.yml  publish-pypi.yml
contracts/: README.md  UPSTREAM_COMMIT.example  api.yaml
scripts/: publish_npm.ps1  publish_pypi.ps1  sync_contract.ps1  sync_contract.py  sync_contract.sh  verify_contract_mirror.py
scripts/git-hooks/: README.md  pre-commit-contract.sample
src/cascades_sdk/: __init__.py  _meta.py  auth.py  errors.py  examples.py  getting_started.py  http_transport.py  sse.py  workflows.py
src/cascades_sdk/client/: __init__.py  client.py  errors.py  polling.py
src/cascades_sdk/compiler/: __init__.py  canonical.py  context.py  dag_builder.py  decorators.py
src/cascades_sdk/diagnostics/: __init__.py  healing.py
src/cascades_sdk/types/: __init__.py
tests/: test_client_aliases.py  test_compiler.py  test_contract_parity.py  test_metadata_branding.py  test_sse.py
