[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascades-sdk"
version = "0.2.0"
description = "Python SDK for Cascades workflow orchestration"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Noir Stack LLC" }
]
keywords = ["cascades", "workflow", "orchestration", "dag", "task", "flow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2.25.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "mypy>=1.8.0",
  "black>=24.0.0",
  "build>=1.2.0",
  "twine>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/no1rstack/cascades"
Documentation = "https://github.com/no1rstack/cascades/tree/main/sdk/python"
Repository = "https://github.com/no1rstack/cascades"
Issues = "https://github.com/no1rstack/cascades/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cascades_sdk*"]

[tool.setuptools.package-data]
cascades_sdk = ["py.typed"]
